<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin_small"
    android:background="@color/white">

    <android.support.v7.widget.CardView
        android:id="@+id/cvCityContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_50">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/dim_50"
            android:layout_height="@dimen/dim_50"
            android:scaleType="centerInside"
            android:src="@drawable/ic_left_arrow" />

        <TextView
            android:id="@+id/tvCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/txt_medium" />

    </android.support.v7.widget.CardView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_point_5"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@+id/cvCityContainer" />

    <android.support.v7.widget.CardView
        android:id="@+id/cityWeatherContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin_low"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature"
                        android:textSize="@dimen/txt_normal" />

                    <TextView
                        android:id="@+id/tvTemperature"
                        style="@style/TextViewStyleWeatherDetail" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_120"
                    android:layout_margin="@dimen/activity_vertical_margin_low"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/ivWeatherIcon"
                        android:layout_width="@dimen/dim_100"
                        android:layout_height="@dimen/dim_100"
                        android:src="@drawable/ic_launcher_background" />

                    <TextView
                        android:id="@+id/tvWeatherInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_vertical_margin_low"
                        android:textSize="@dimen/txt_medium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin_low"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/TextViewStyleWeatherTitle"
                        android:text="@string/pressure" />

                    <TextView
                        android:id="@+id/tvPressure"
                        style="@style/TextViewStyleWeatherDetail" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin_low"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/TextViewStyleWeatherTitle"
                        android:text="@string/humidity" />

                    <TextView
                        android:id="@+id/tvHumidity"
                        style="@style/TextViewStyleWeatherDetail" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin_low"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/TextViewStyleWeatherTitle"
                        android:text="@string/wind_speed" />

                    <TextView
                        android:id="@+id/tvWindSpeed"
                        style="@style/TextViewStyleWeatherDetail" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin_low"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/TextViewStyleWeatherTitle"
                        android:text="@string/wind_deg" />

                    <TextView
                        android:id="@+id/tvWindDeg"
                        style="@style/TextViewStyleWeatherDetail" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin_low"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/TextViewStyleWeatherTitle"
                        android:text="@string/sunrise" />

                    <TextView
                        android:id="@+id/tvSunrise"
                        style="@style/TextViewStyleWeatherDetail" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin_low"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/TextViewStyleWeatherTitle"
                        android:text="@string/sunset" />

                    <TextView
                        android:id="@+id/tvSunSet"
                        style="@style/TextViewStyleWeatherDetail" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBarWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cvCityContainer" />

</android.support.constraint.ConstraintLayout>